--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=redis_password
 NUM_IPS=6
-DESIRED_SUBNET=10.128.0.0/10
+DESIRED_SUBNET=10.192.0.0/10
 TARGET_SUBNETS=10.100.0.0/16
+INTERFACE_NAME=divisor
